キーダウンイベントを追加

--- a/ShortCat/popup.html
+++ b/ShortCat/popup.html
@@ -26,78 +26,78 @@
 
 	<!--  -->
 	<div class="tab-content">
-		<div role="tabpanel" class="tab-pane active" id="keyboard">
+		<div id="keyboard" class="tab-pane active" role="tabpanel">
 			<div class="tab_panel">
 				<div class="panel panel-default">
 					<div class="panel-body">
 						<div id="btn-toolbar-1st" class="btn-toolbar" role="toolbar"
 							aria-label="first_toolbar">
-							<button class="btn btn-default key">1</button>
-							<button class="btn btn-default key">2</button>
-							<button class="btn btn-default key">3</button>
-							<button class="btn btn-default key">4</button>
-							<button class="btn btn-default key">5</button>
-							<button class="btn btn-default key">6</button>
-							<button class="btn btn-default key">7</button>
-							<button class="btn btn-default key">8</button>
-							<button class="btn btn-default key">9</button>
-							<button class="btn btn-default key">0</button>
-							<button class="btn btn-default key">-</button>
-							<button class="btn btn-default key">^</button>
+							<button id="key_49" class="btn btn-default key">1</button>
+							<button id="key_50" class="btn btn-default key">2</button>
+							<button id="key_51" class="btn btn-default key">3</button>
+							<button id="key_52" class="btn btn-default key">4</button>
+							<button id="key_53" class="btn btn-default key">5</button>
+							<button id="key_54" class="btn btn-default key">6</button>
+							<button id="key_55" class="btn btn-default key">7</button>
+							<button id="key_56" class="btn btn-default key">8</button>
+							<button id="key_57" class="btn btn-default key">9</button>
+							<button id="key_48" class="btn btn-default key">0</button>
+							<button id="key_189" class="btn btn-default key">-</button>
+							<button id="key_222" class="btn btn-default key">^</button>
 						</div>
 
 						<div id="btn-toolbar-2nd" class="btn-toolbar" role="toolbar"
 							aria-label="second_toolbar">
-							<button class="btn btn-default key">Q</button>
-							<button class="btn btn-default key">W</button>
-							<button class="btn btn-default key">E</button>
-							<button class="btn btn-default key">R</button>
-							<button class="btn btn-default key">T</button>
-							<button class="btn btn-default key">Y</button>
-							<button class="btn btn-default key">U</button>
-							<button class="btn btn-default key">I</button>
-							<button class="btn btn-default key">O</button>
-							<button class="btn btn-default key">P</button>
-							<button class="btn btn-default key">@</button>
-							<button class="btn btn-default key">[</button>
+							<button id="key_81" class="btn btn-default key">Q</button>
+							<button id="key_87" class="btn btn-default key">W</button>
+							<button id="key_69" class="btn btn-default key">E</button>
+							<button id="key_82" class="btn btn-default key">R</button>
+							<button id="key_84" class="btn btn-default key">T</button>
+							<button id="key_89" class="btn btn-default key">Y</button>
+							<button id="key_85" class="btn btn-default key">U</button>
+							<button id="key_73" class="btn btn-default key">I</button>
+							<button id="key_79" class="btn btn-default key">O</button>
+							<button id="key_80" class="btn btn-default key">P</button>
+							<button id="key_192" class="btn btn-default key">@</button>
+							<button id="key_219" class="btn btn-default key">[</button>
 						</div>
 
 						<div id="btn-toolbar-3rd" class="btn-toolbar" role="toolbar"
 							aria-label="third_toolbar">
-							<button class="btn btn-default key">A</button>
-							<button class="btn btn-default key">S</button>
-							<button class="btn btn-default key">D</button>
-							<button class="btn btn-default key">F</button>
-							<button class="btn btn-default key">G</button>
-							<button class="btn btn-default key">H</button>
-							<button class="btn btn-default key">J</button>
-							<button class="btn btn-default key">K</button>
-							<button class="btn btn-default key">L</button>
-							<button class="btn btn-default key">;</button>
-							<button class="btn btn-default key">:</button>
-							<button class="btn btn-default key">]</button>
+							<button id="key_65" class="btn btn-default key">A</button>
+							<button id="key_83" class="btn btn-default key">S</button>
+							<button id="key_68" class="btn btn-default key">D</button>
+							<button id="key_70" class="btn btn-default key">F</button>
+							<button id="key_71" class="btn btn-default key">G</button>
+							<button id="key_72" class="btn btn-default key">H</button>
+							<button id="key_74" class="btn btn-default key">J</button>
+							<button id="key_75" class="btn btn-default key">K</button>
+							<button id="key_76" class="btn btn-default key">L</button>
+							<button id="key_187" class="btn btn-default key">;</button>
+							<button id="key_186" class="btn btn-default key">:</button>
+							<button id="key_221" class="btn btn-default key">]</button>
 						</div>
 
 						<div id="btn-toolbar-4th" class="btn-toolbar" role="toolbar"
 							aria-label="fourth_toolbar">
-							<button class="btn btn-default key">Z</button>
-							<button class="btn btn-default key">X</button>
-							<button class="btn btn-default key">C</button>
-							<button class="btn btn-default key">V</button>
-							<button class="btn btn-default key">B</button>
-							<button class="btn btn-default key">N</button>
-							<button class="btn btn-default key">M</button>
-							<button class="btn btn-default key">,</button>
-							<button class="btn btn-default key">.</button>
-							<button class="btn btn-default key">/</button>
-							<button class="btn btn-default key">\</button>
+							<button id="key_90" class="btn btn-default key">Z</button>
+							<button id="key_88" class="btn btn-default key">X</button>
+							<button id="key_67" class="btn btn-default key">C</button>
+							<button id="key_86" class="btn btn-default key">V</button>
+							<button id="key_66" class="btn btn-default key">B</button>
+							<button id="key_78" class="btn btn-default key">N</button>
+							<button id="key_77" class="btn btn-default key">M</button>
+							<button id="key_188" class="btn btn-default key">,</button>
+							<button id="key_190" class="btn btn-default key">.</button>
+							<button id="key_191" class="btn btn-default key">/</button>
+							<button id="key_226" class="btn btn-default key">\</button>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 
-		<div role="tabpanel" class="tab-pane active" id="list">
+		<div id="list" class="tab-pane" role="tabpanel">
 			<div class="tab_panel">
 				<div id="item_info" class="list_part panel panel-default">
 					<div class="panel-heading">Bookmark Infomation</div>
@@ -146,7 +146,7 @@
 		</div>
 
 		<!-- 追加セクション -->
-		<div role="tabpanel" class="tab-pane active" id="add">
+		<div id="add" class="tab-pane" role="tabpanel">
 			<div class="tab_panel">
 				<div class="panel panel-default">
 					<div class="panel-body">
@@ -182,7 +182,7 @@
 
 
 		<!-- セクション -->
-		<div role="tabpanel" class="tab-pane active" id="setting">
+		<div id="setting" class="tab-pane" role="tabpanel">
 			<div class="tab_panel">
 				<div class="panel panel-default">
 					<div class="panel-body"></div>
@@ -192,11 +192,16 @@
 	</div>
 
 	<!-- フッタ -->
-	<footer></footer>
+	<footer>
+		<h3 id="debug_info_head">Debug Message</h3>
+		<div id="debug_info" class="panel panel-default">
+		</div>
+	</footer>
 
 	<!-- スクリプト -->
 	<script src="js/jquery-2.2.0.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+	<script src="js/popup.js"></script>
 
 </body>
 </html>
